Don't allow ungrouping if the layers cannot be put into the parent layer

Masks cannot be added to the root layer of the image, hence we shouldn't
allow ungrouping a layers with masks into the root.

BUG:475860